Eliminacion clases irrelevantes. Modificacion de logica